Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-810

unable to set keyboard shortcuts to alt+o or alt+c

    XMLWordPrintable

Details

    • 51568b59745eeaf3f16f4ec5d451728a72a9aea2

    Description

      I open up the options window, go to Environment->Keyboard, choose any command and try to set the key sequence to Alt+O or Alt+C.

      Expected to see:
      keyboard shortcut set to alt+o or alt+c.

      Got instead:
      dialog closed due to cancel/ok button being pressed.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            dmolkent Daniel Molkentin (Inactive Nokia Account!) (Inactive)
            con Eike Ziller
            Votes:
            1 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes