Shortcut dialogs: Make it possible to use Accel Keyboard Shortcuts

Fixes: QTCREATORBUG-810

Reviewed-By: con